[gd_scene load_steps=6 format=2]

[ext_resource path="res://Src/UserInterface/SceneChangeButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/UserInterface/Title.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Main_theme.tres" type="Theme" id=4]
[ext_resource path="res://Src/UserInterface/UserInterface.gd" type="Script" id=5]
[ext_resource path="res://Src/UserInterface/ContinueButton.tscn" type="PackedScene" id=6]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="."]
margin_right = 400.0
margin_bottom = 150.0
text = "HP : %s"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullets" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -225.0
margin_right = 225.0
margin_bottom = 150.0
text = "Bullets : %s"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -400.0
margin_bottom = 150.0
text = "Score : %s"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.223529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="PauseOverlay" instance=ExtResource( 3 )]
margin_left = -187.0
margin_top = 145.0
margin_right = 187.0
margin_bottom = 245.0
text = "Paused"

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -211.0
margin_right = 300.0
margin_bottom = 269.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 6 )]
margin_right = 600.0
margin_bottom = 157.0

[node name="RetryButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 1 )]
margin_top = 161.0
margin_right = 600.0
margin_bottom = 318.0
text = "Retry"
next_scene = "res://Src/Levels/EmptyLevel.tscn"

[node name="MainScreenButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 1 )]
margin_top = 322.0
margin_right = 600.0
margin_bottom = 480.0
text = "Main Menu"
next_scene = "res://Src/Screens/MainScreen.tscn"
[connection signal="button_up" from="PauseOverlay/PauseMenu/ContinueButton" to="." method="_on_ContinueButton_button_up"]
